# SmartCalc_CPP

./: CMakeLists.txt
src/: Makefile  main.cpp
src/Controller/: controller.cpp  controller.h
src/Model/: BankCalculator.cpp  BankCalculator.h  CalculatorModel.cpp  CalculatorModel.h  Dictionary.h
src/UnitTest/: calculator_test.cpp
